fix: set z-index to popover

--- a/src/shared/ui/Popover/Popover.module.css
+++ b/src/shared/ui/Popover/Popover.module.css
@@ -2,4 +2,5 @@
   background-color: var(--color-neutral-0);
   border-radius: 16px;
   box-shadow: 0 4px 4px 0 #00000040;
+  z-index: var(--z-index-bottomsheet);
 }
